--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-elements": "^0.18.5",
+    "react-native-maps": "^0.19.0",
     "react-native-scrollable-tab-view": "^0.8.0"
   }
 }
