--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.50.3",
     "react-native-elements": "^0.18.5",
     "react-native-maps": "^0.19.0",
-    "react-native-scrollable-tab-view": "^0.8.0"
+    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-navigation": "^1.0.0-beta.23"
   }
 }
